# lung-cancer-risk

./: .gitignore  .nojekyll  README.md  index.html  lung cancer.ipynb  modeling.ipynb  package.json  pyproject.toml  stats_utils.py  vite.config.js
assets/: index-BQtV8aPt.js  index-BiB8lhSN.js  index-CkmL06xK.js  index-DoKyxdZh.js  index-POfPc-Zy.js
demo/: index.html
demo/assets/: index-BWf_n1zQ.js
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.tsx
notebooks/: behavioral.ipynb  features_selection.ipynb  generate_distributions.py  modeling.ipynb  pyproject.toml
notebooks/data/: variables_descriptions.json
public/: feature_distributions.json
src/: App.tsx  Slider.tsx
